changes to static and templates

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
         <!---Newly added css for uploads-->
 
         <!-- https://favicon.io/emoji-favicons/photo-album_icon -->
-        <link href="/static/photo_album.ico" rel="icon">
+        <link href="/static/favicon.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
 
