--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block main %}
-    <form class="dropzone" action="{{ url_for('upload_file') }}" method = "POST" accept=".raw, .png, .jpg, .jpeg, .gif, .bmp, .mp4, .avi, .mov, .flv, .wmv">
+    <form class="dropzone" action="{{ url_for('upload_file') }}" method = "POST">
     </form>
-    <p>Maximum file size is 100mb<br>   
+    <p>Maximum file size is 10mb<br>   
     Drop your photos/videos in the box above, once complete you will see a tick. Go back to gallery to view all of them
     </p>
 
